# kanAPI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEOWNERS  Dockerfile  Makefile  PRODUCTION_CHECKLIST.md  SECURITY_MANIFEST.md  database.ini  docker-compose.yml  implementation_of_openFGA.md  main.py  models.py  pyproject.toml  readme.md  requirements.txt  script.sh
.claude/: settings.local.json
.claude/skills/kanapi-case-endpoint/: SKILL.md
frontend/: dashboard.html  index.html  package-lock.json  package.json  register.html  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
frontend/src/pages/dashboard/: ActivityTimeline.jsx  AuditLogView.jsx  CaseDetail.jsx  CaseDetailPage.jsx  CaseEditForm.jsx  CaseSearchBar.jsx  CasesTable.jsx  CompanyAdminDashboard.jsx  CreateCaseModal.jsx  CreateCompanyModal.jsx  Pagination.jsx  (+8 more)
nginx/: nginx.conf
observability/: grafana-dashboard-provision.yml  promtail-config.yml
observability/dashboards/: kanapi.json
src/: __init__.py
src/api/: __init__.py  main.py  models.py
src/api/db/: __init__.py  config.py  create_database.py  create_tables.py  database.py  postgres.py  prod_fga.py  seed.py  seed_fga.py  sqlite.py
src/api/health/: __init__.py  health.py
src/api/middleware/: __init__.py  audit.py  logging.py  security.py
src/api/v1/: case.py
src/web/: readme.md
tests/: TEST.md  conftest.py  test_case.py  test_case_activity.py  test_case_auth.py  test_company.py  test_company_case_search.py  test_customer_profile.py  test_live.py  test_user.py
(+18 files in other folders)
