[project]
name = "kanapi"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic",
    "uvicorn",
    "fastapi",
    "httpx",
    "faker",
    "psycopg2-binary",
    "sqlalchemy",
    "PyJWT",
    "python-multipart",
    "python-dotenv",
    "uuid7",
    "minio",
    "requests",
    "openfga-sdk",
    "bcrypt",
    "slowapi",
    "email-validator>=2.3.0",
    "markitdown[pdf]",
    "rumdl",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
lint.select = ["E", "F", "I", "W", "C90", "N", "UP", "B", "ANN", "D", "COM", "PT", "RUF", "SIM", "TCH", "ARG"]
lint.ignore = ["W293"]
lint.fixable = ["A", "B", "C", "E", "F", "I", "N", "UP", "W", "COM", "PT", "SIM", "TCH"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = [
    ".bzr",
    ".claude",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120
target-version = "py37"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "uvicorn", "faker"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
